[package]
name = "budget_ditto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34"
# pcap = "1.3.0"
# bencher = "0.1"
criterion = "0.5.1"
rand = "0.8.4"
libc = "0.2.107"
crossbeam = "0.8"
toml = "0.8.12"

[[bench]]
name = "performance_tests"
harness = false